# LimitLens

./: .gitattributes  .gitignore  AGENTS.md  PLAN.md  README.md  package-lock.json  package.json
docs/: feature-roadmap.md  handoff.md  project-state.md  windows-dev-setup.md
memory/: infusage-project.md  openusage-reference.md  provider-data-feasibility.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  plugin_host.rs  secrets.rs  snapshot_store.rs  tray.rs
src-tauri/src/providers/: claude.rs  codex.rs  deepseek.rs  mod.rs  opencode_db.rs  opencode_quota.rs
